code: add refresh token docs
