# storage/api-docs/api-docs.json
@@ -32,8 +32,8 @@
                                 },
                                 "type": "object",
                                 "example": {
-                                    "email": "user@example.com",
-                                    "password": "user1"
+                                    "email": "user@test.com",
+                                    "password": "useruser1"
                                 }
                             }
                         }
@@ -69,7 +69,7 @@
                                                     "properties": {
                                                         "id": {
                                                             "type": "number",
-                                                            "example": 1
+                                                            "example": 2
                                                         },
                                                         "name": {
                                                             "type": "string",
@@ -77,7 +77,7 @@
                                                         },
                                                         "email": {
                                                             "type": "string",
-                                                            "example": "user@example.com"
+                                                            "example": "user@test.com"
                                                         },
                                                         "email_verified_at": {
                                                             "type": "string",
@@ -185,9 +185,9 @@
                                 },
                                 "type": "object",
                                 "example": {
-                                    "name": "User",
-                                    "email": "user@example.com",
-                                    "password": "user1"
+                                    "name": "John",
+                                    "email": "john@test.com",
+                                    "password": "johnjohn1"
                                 }
                             }
                         }
@@ -227,11 +227,11 @@
                                                         },
                                                         "name": {
                                                             "type": "string",
-                                                            "example": "User"
+                                                            "example": "John"
                                                         },
                                                         "email": {
                                                             "type": "string",
-                                                            "example": "user@example.com"
+                                                            "example": "john@test.com"
                                                         },
                                                         "email_verified_at": {
                                                             "type": "string",
@@ -366,6 +366,144 @@
                                         "data": {
                                             "type": "object",
                                             "example": []
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Invalid token",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "meta": {
+                                            "properties": {
+                                                "code": {
+                                                    "type": "number",
+                                                    "example": 422
+                                                },
+                                                "status": {
+                                                    "type": "string",
+                                                    "example": "error"
+                                                },
+                                                "message": {
+                                                    "type": "string",
+                                                    "example": "Unauthenticated."
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "data": {
+                                            "type": "object",
+                                            "example": []
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/refresh": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Refresh",
+                "operationId": "48bc0aaee4ed3ed89ef12f9065e2df85",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "example": []
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "meta": {
+                                            "properties": {
+                                                "code": {
+                                                    "type": "number",
+                                                    "example": 200
+                                                },
+                                                "status": {
+                                                    "type": "string",
+                                                    "example": "success"
+                                                },
+                                                "message": {
+                                                    "type": "string",
+                                                    "example": "Token refreshed"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "user": {
+                                                    "properties": {
+                                                        "id": {
+                                                            "type": "number",
+                                                            "example": 2
+                                                        },
+                                                        "name": {
+                                                            "type": "string",
+                                                            "example": "User"
+                                                        },
+                                                        "email": {
+                                                            "type": "string",
+                                                            "example": "user@test.com"
+                                                        },
+                                                        "email_verified_at": {
+                                                            "type": "string",
+                                                            "example": null
+                                                        },
+                                                        "updated_at": {
+                                                            "type": "string",
+                                                            "example": "2022-06-28 06:06:17"
+                                                        },
+                                                        "created_at": {
+                                                            "type": "string",
+                                                            "example": "2022-06-28 06:06:17"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                },
+                                                "access_token": {
+                                                    "properties": {
+                                                        "token": {
+                                                            "type": "string",
+                                                            "example": "randomtokenasfhajskfhajf398rureuuhfdshk"
+                                                        },
+                                                        "type": {
+                                                            "type": "string",
+                                                            "example": "Bearer"
+                                                        },
+                                                        "expires_in": {
+                                                            "type": "number",
+                                                            "example": 3600
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
                                         }
                                     },
                                     "type": "object"
